# crucible-eval

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
backend/: main.py  pyproject.toml
backend/models/: schemas.py
backend/prompts/: agent_template.txt  chatbot_template.txt  codegen_template.txt  rag_template.txt  system_prompt.txt
backend/routers/: generate.py
backend/services/: generator.py
backend/services/exporters/: deepeval.py  promptfoo.py  ragas.py
backend/services/providers/: anthropic_provider.py  base.py  google_provider.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py
backend/tests/: test_api_generate.py  test_exporters.py  test_generator.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/forge/: page.tsx
frontend/app/result/: page.tsx
frontend/components/: AppForm.tsx  BenchmarkCard.tsx  DownloadPanel.tsx  ProviderSelector.tsx  TestCaseTable.tsx
frontend/lib/: store.ts  types.ts
notebooks/: deepeval_usage_demo.ipynb  ragas_usage_demo.ipynb
